syntax = "proto3";

package hello;

// 定义服务
service Greeter {
  // 发送问候
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  // 流式问候
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}
}

// 请求消息
message HelloRequest {
  string name = 1;
  string message = 2;
}

// 响应消息
message HelloReply {
  string message = 1;
  string timestamp = 2;
  string server_info = 3;
} 